GNOME Bugzilla – Bug 371453
priority for post is not high enough
Last modified: 2006-11-07 16:35:39 UTC
when all available connections are used for downloading a lot of messages (with many download requests pending), posting a new message is scheduled at the end of the task list. It should be scheduled before pending download (I think a similar fix was done recently for online reading vs pending download).
Created attachment 76093 [details] [review] 0.118 patch I love it when people report easy bugs that take only one line to fix. :)