Bug 371453 – priority for post is not high enough http://bugzilla.gnome.org/show_bug.cgi?id=371453

Bug 371720 – References: field can cause thunderbird to break threads
http://bugzilla.gnome.org/show_bug.cgi?id=371720